--- a/JenkinsNetCoreDemo/JenkinsNetCoreDemo/JenkinsNetCoreDemo.csproj
+++ b/JenkinsNetCoreDemo/JenkinsNetCoreDemo/JenkinsNetCoreDemo.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
