--- a/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Dockerfile
+++ b/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Dockerfile
@@ -45,5 +45,6 @@ RUN echo 'Asia/Shanghai' >/etc/timezone
  
 VOLUME /app
 EXPOSE 7010
+EXPOSE 80
  
 ENTRYPOINT ["dotnet", "JenkinsNetCoreDemo.dll"]
