--- a/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Properties/launchSettings.json
+++ b/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Properties/launchSettings.json
@@ -24,19 +24,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5005"
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44328"
-      },
-      "httpPort": 12423,
-      "useSSL": true,
-      "sslPort": 44328
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast"
     }
   }
 }
