--- a/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Dockerfile.original
+++ b/JenkinsNetCoreDemo/JenkinsNetCoreDemo/Dockerfile.original
@@ -1,3 +1,23 @@
+#FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
+#WORKDIR /app
+#EXPOSE 80
+#EXPOSE 7010
+#
+#FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
+#WORKDIR /src
+#COPY ["JenkinsNetCoreDemo/JenkinsNetCoreDemo.csproj", "JenkinsNetCoreDemo/"]
+#RUN dotnet restore "JenkinsNetCoreDemo/JenkinsNetCoreDemo.csproj"
+#COPY . .
+#WORKDIR "/src/JenkinsNetCoreDemo"
+#RUN dotnet build "JenkinsNetCoreDemo.csproj" -c Release -o /app/build
+#
+#FROM build AS publish
+#RUN dotnet publish "JenkinsNetCoreDemo.csproj" -c Release -o /app/publish
+#
+#FROM base AS final
+#WORKDIR /app
+#COPY --from=publish /app/publish .
+#ENTRYPOINT ["dotnet", "JenkinsNetCoreDemo.dll"]
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
 #注意.和/之间有空格,表示把主机当前目录内容拷贝到镜像的/publish目录
 RUN ln -s /lib/x86_64-linux-gnu/libdl-2.24.so /lib/x86_64-linux-gnu/libdl.so
@@ -14,27 +34,15 @@ RUN apt-get install libfontconfig1 -y
 RUN apt-get install libgdiplus -y && ln -s libgdiplus.so gdiplus.dll
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build
-
-WORKDIR /src
-COPY . .
-#RUN dotnet restore --configfile nuget.config JenkinsNetCoreDemo.sln --no-cache && \
-    #dotnet build --no-restore -c Release JenkinsNetCoreDemo.sln
-RUN dotnet restore JenkinsNetCoreDemo.sln --no-cache && \
-    dotnet build --no-restore -c Release JenkinsNetCoreDemo.sln
-
-FROM build AS publish
-WORKDIR /src
-RUN dotnet publish --no-restore -c Release -o /app
-
-FROM base AS final
-ARG env
+#系统必备组件安装完成
+#ARG env
 #run echo $env
-#COPY . /app
+COPY . /app
 WORKDIR /app
-ENV ASPNETCORE_ENVIRONMENT=$env
+#ENV ASPNETCORE_ENVIRONMENT=$env
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN echo 'Asia/Shanghai' >/etc/timezone
-#VOLUME /app
-COPY --from=publish /app .
+ 
+VOLUME /app
  
 ENTRYPOINT ["dotnet", "JenkinsNetCoreDemo.dll"]
